[package]
name = "rust-future-presentation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = ["console", "HtmlImageElement", "HtmlCanvasElement", "Window", "Document", "CanvasRenderingContext2d"] }
